[Bug]City Name in Profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 <p>Nome: <%= @user.name %></p>
 <p>Nickname: <%= @user.username %></p>
 <p>Email: <%= @user.email %></p>
-<p>Cidade: <%= @user.city %></p>
+<p>Cidade: <%= @user.city.city %></p>
 <p>Aniversário: <%= @user.birthday %> Falta o FORMAT</p>
 
 
