--- a/app/views/layouts/_sidebar_right_featured.html.erb
+++ b/app/views/layouts/_sidebar_right_featured.html.erb
@@ -1,6 +1,6 @@
 <ul class="thumbnails list-unstyled">
 
-  <li style="margin-bottom:5px;">
+  <li style="margin-bottom: -25px">
     <div class="thumbnail" style="padding: 0">
       <span class="price" style="font-size: 8px">EVENTO</span>
       <div style="padding:4px">
@@ -12,7 +12,7 @@
     </div>
   </li>
 
-  <li style="margin-bottom:5px;">
+  <li style="margin-bottom: -25px">
     <div class="thumbnail" style="padding: 0">
       <span class="price" style="font-size: 8px">EVENTO</span>
       <div style="padding:4px">
@@ -24,7 +24,7 @@
     </div>
   </li>
 
-  <li style="margin-bottom:5px;">
+  <li style="margin-bottom: -25px">
     <div class="thumbnail" style="padding: 0">
       <span class="price" style="font-size: 8px">EVENTO</span>
       <div style="padding:4px">
@@ -36,7 +36,7 @@
     </div>
   </li>
 
-  <li style="margin-bottom:5px;">
+  <li style="margin-bottom: -25px">
     <div class="thumbnail" style="padding: 0">
       <span class="price" style="font-size: 8px">EVENTO</span>
       <div style="padding:4px">
