--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
           <a class="navbar-brand"  href="/">AgroSocial</a>
 
 
-              <input type="text" id="omni-search" style="width:50%; float:left" class="form-control" placeholder="Pesquisar">
+              <input type="text" id="omni-search" style="width:50%; float:left" class="form-control typeahead" placeholder="Pesquisar">
             
             <button type="submit" id="omni-search-btn" class="btn btn-default">Pesquisar</button>
 
