--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,23 +21,10 @@
          <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
 
-         <!-- <div class="input-append">
-<input class="span2" id="appendedDropdownButton" type="text">
-<div class="btn-group">
-<button class="btn dropdown-toggle" data-toggle="dropdown">
-Action
-<span class="caret"></span>
-</button>
-<ul class="dropdown-menu">
-...
-</ul>
-</div>
-</div>
--->
 
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
-              <input type="text" id="omni-search" class="form-control" placeholder="Pesquisar">
+              <input type="text" id="omni-search" class="form-control typeahead" placeholder="Pesquisar">
             </div>
             <button type="submit" id="omni-search-btn" class="btn btn-default">Pesquisar</button>
           </form>
