[Feature]Filtered Ads

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,108 +1,23 @@
 
-<ol class="breadcrumb">
-              <li class="active"><a href="<%= ads_path %>"><i class="fa fa-dashboard"></i> Ads</a></li>
-              
-</ol>
-
-<section class="panel">
-  <header class="panel-heading">
-                All Ads
-    </header>
-  <div class="table-responsive">
-    <table class="table table-hover" >
-      <thead>
-        <tr>
-          <th></th>
-          <th>Image</th>
-          <th>Title</th>
-          <th>Description</th>
-          <th>Price</th>
-          <th>Category</th>
-          <th>Expire date</th>
-          <th>Location</th>
-          <th>Is active</th>
-          <th>Type price</th>
-          <th>City</th>
-          <th>User_ID / User_Name</th>
-          <th></th>
-          <th></th>
-          <th></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @ads.each do |ad| %>
-          <tr>
-            <td>
-               
-              <a href="#details<%= ad.id %>"  data-toggle="collapse"><span class="label label-info"><i class="fa fa-plus"></i></a></td>
-            <td>
-              <div class="img_table">
-                <!--HELPER helper/ads_helper -->
-               <%= first_image( ad.ad_images.first ) %>
-              </div>
-            </td>
-            <td><%= ad.title %></td>
-            <td><%= ad.description %></td>
-            <td><%= ad.price %></td>
-            <td>
-              <% if ad.category %>
-                <span class="label" style="background-color: #<%= ad.category.color %>">
-                  <%= ad.category.name %>
-                </span>
-
-                <% else %> 
-                   <span class="label label-default" >
-                    Sem Categoria
-                  </span>
-              <% end %>
-            </td>
-            <td><%= ad.expire_date %></td>
-            <td><%= ad.location %></td>
-            <td><%= ad.is_active %></td>
-            <td><%= ad.type_price_id %></td>
-            <td><%= ad.city.city unless ad.city.blank? %></td>
-            <td><%= ad.user_id %> / <%= ad.user.name %></td>
-
-            <td><%= link_to 'Show', ad %></td>
-            <td><%= link_to 'Edit', edit_ad_path(ad) %></td>
-            <td><%= link_to 'Destroy', ad, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-
-          <tr id="details<%= ad.id %>" class="collapse" data-toggle="collapse">
-             <td class="details" colspan="6">
-                <table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">
-                   <tbody>
-                      <tr>
-                         <td>Detalhes:</td>
-                         <td>blabla</td>
-                      </tr>
-                      <tr>
-                         <td>Detalhes:</td>
-                         <td>blabla</td>
-                      </tr>
-                      <tr>
-                         <td>Detalhes:</td>
-                         <td>blabla</td>
-                      </tr>
-                   </tbody>
-                </table>
-             </td>
-          </tr>
 
 
-        <% end %>
-      </tbody>
-    </table>
-  </div >
-  <br>
+
+<h2>Filtrar por Categorias?</h2>
+<ul class="filter option-set" data-filter-group="category">
+  <li><a href="#" data-filter-value="">Todos</a></li>
+<% @categories.each do |category| %>
+<li><a href="#" data-filter-value=".<%= category.name %>">
+  <%= category.name %>
+</a></li>
+<% end %>
+</ul>
 
   <legend> Anúncios </legend>
-  <div class="container">
+  <div class="container" id="things">
       <div class="row">
         <ul class="thumbnails">
          <% @ads.each do |ad| %>
-              <li class="col-sm-3 col-md-3">
+              <li class="col-sm-3 col-md-3 thing <%= ad.category.name %>">
                 <div class="thumbnail" id="thumbnail_ad" style="padding: 0">
                   <span class='price' ><%= ad.price %>€</span>
                   <div style="padding:4px" >
@@ -134,10 +49,6 @@
         </ul>
       </div>
 </div>
-
-
-
-<%= link_to 'New Ad', new_ad_path %>
                           
 </section>
 
