--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -15,8 +15,16 @@
                     <%= link_to "<i class='fa fa-spinner '></i> Login".html_safe , new_user_session_path %>
                   <% end %>
 
-                
+              
               </li>
-              <li>Teste</li>
+              <li>
+                <a href="/" class="nav-header" >
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-ban fa-stack-2x text-danger"></i>
+                    </span>
+                    Danger-Zone
+              </a>
+            </li>
+
         </ul>
       </div>
