--- a/app/views/admin/cities/_form.html.erb
+++ b/app/views/admin/cities/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for admin_cities_path(@city) do |f| %>
+<%= form_for ([:admin, @city]) do |f| %>
   <% if @city.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@city.errors.count, "error") %> prohibited this city from being saved:</h2>
