[Update Feature]Admin Zone added link[Admin]

--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -18,7 +18,7 @@
               
               </li>
               <li>
-                <a href="/" class="nav-header" >
+                <a href="/admin/ads" class="nav-header" >
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-ban fa-stack-2x text-danger"></i>
                     </span>
