nil birthday resolved

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,9 +33,9 @@
       </div>
 
       <div class="field">
-        <%= f.label :birthday %><br />
-        <%= f.text_field :birthday, :label => "Date",  :class => ['datepicker','form-control'] ,:value => (f.object.birthday.strftime('%Y-%m-%d'))%>
-      </div>
+	     <%= f.label :birthday %><br />
+	     <%= f.text_field :birthday, :label => "Date",  :class => ['datepicker','form-control'] %>
+	   </div>
 
       <div>
         <%= f.label :phone, "Phone"%><br />
