--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <% if user_signed_in? %>
 	<p> Seja Bem Vindo '<%= current_user.username %>'</p>
 	<p><%= link_to "Terminar a sessão",destroy_user_session_path, method: :delete %></p>
